--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.database=arved
+spring.data.mongodb.database=arved_db
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 #spring.data.mongodb.username=
