--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
             <artifactId>openpdf</artifactId>
             <version>1.3.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf-fonts-extra</artifactId>
+            <version>1.3.25</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
